# baresip_huf

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  windows.yml
cmake/: FindGTK3.cmake  FindRE.cmake
include/msvc_compat/: unistd.h
modules/gtk/: CMakeLists.txt  gtk_mod.c
modules/snapshot/: CMakeLists.txt
src/msvc_compat/: mingw_compat.c
